# unisafe

./: .gitignore  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: coverage.yml  python-package.yml
src/unisafe/: __init__.py  uread.py  wrappers.py
src/unisafe/parse/: dammit.py
tests/: gen_file.py  test.csv  test_multi.txt  test_uread.py
