[metadata]
name = unisafe
version = 0.1.0
author = ionite
author_email = dev@ionite.io
description = Read unknown files and binary encodings into unicode.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ionite34/unisafe
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    chardet~=4.0.0
zip_safe = False

[options.packages.find]
where = src